# MatchHire

./: .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_READINESS_REPORT.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VISION.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: accessibility.yml  ci.yml  docker.yml  e2e.yml  openapi.yml  quality.yml  release.yml  security.yml  test.yml
backend/: .env.example  DEPLOYMENT.md  Dockerfile  SECURITY_IMPLEMENTATION_REPORT.md  celerybeat-schedule  docker-compose.production.yml  manage.py  requirements.txt  schema.yml
backend/.github/workflows/: ci.yml  docker.yml  lint.yml  release.yml  security.yml  test.yml
backend/apps/: README.md
backend/apps/admin/: apps.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/analytics/: serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/apps/applications/: apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/apps/core/: cache.py
backend/apps/interviews/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/apps/jobs/: API_EXAMPLES.md  admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/apps/matching/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  test_async_workflows.py  tests.py  urls.py  views.py
backend/apps/notifications/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/apps/resumes/: SEARCH_EXAMPLE_RESPONSE.md  admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/apps/search/: README.md  apps.py  config.py  exceptions.py  registry.py  signals.py
backend/apps/users/: admin.py  auth_urls.py  auth_views.py  authentication.py  forms.py  manager.py  models.py  permissions.py  profile_urls.py  profile_views.py  rbac.py  rbac_urls.py  rbac_views.py  serializers.py  signals.py  tests.py  urls.py
backend/benchmarks/: api_benchmarks.py  cache_benchmarks.py  recommendation_benchmarks.py  run_benchmarks.py  search_benchmarks.py
backend/docs/observability/: INTEGRATION.md  README.md
backend/docs/performance/: CELERY_PERFORMANCE_REVIEW.md  CONNECTION_MANAGEMENT_REVIEW.md  DASHBOARD_CONFIG.md  PAGINATION_REVIEW.md  PERFORMANCE_AUDIT.md  PERFORMANCE_BUDGETS.md  README.md
backend/docs/production/: architecture.md  benchmark-results.md  capacity-planning.md  deployment-checklist.md  deployment.md  disaster-recovery.md  engineering-review.md  operations.md  scaling.md  security.md  upgrade-guide.md
backend/docs/recommendation/: ARCHITECTURE.md  DIVERSIFICATION.md  EXTENSION.md  PERFORMANCE.md  PIPELINE.md  README.md  SIGNALS.md  STRATEGIES.md
backend/docs/search/: DEVELOPER_GUIDE.md  README.md
backend/docs/search_architecture/: ARCHITECTURE_DOCUMENTATION.md  ENGINEERING_REVIEW.md  EXTENSIBILITY_DESIGN.md  INDEX_STRATEGY.md  RANKING_STRATEGY.md  README.md  RECOMMENDATION_ARCHITECTURE.md  SCALABILITY_REVIEW.md  SEARCH_API_DESIGN.md  SEARCH_ARCHITECTURE.md  SEARCH_AUDIT.md  SEARCH_DOMAIN_MODEL.md  SEARCH_REQUIREMENTS.md
backend/loadtesting/k6/: load_test.js
backend/matchhire_backend/: README.md  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/matchhire_backend/api/: urls.py  views.py
backend/matchhire_backend/core/: apps.py  backup.py  caching.py  env.py  exceptions.py  feature_flags.py  health.py  ip_throttling.py  logging_config.py  metrics.py  metrics_middleware.py  middleware.py  operational_tests.py  performance.py  production_validation.py  rate_limiting.py  resilience.py  security_audit.py  security_headers.py  security_validation.py  sentry_config.py  startup_checks.py  tests.py  tests_documentation.py  tests_production.py  throttling.py  validation.py  validators.py
backend/matchhire_backend/settings/: base.py  dev.py  prod.py  test.py
backend/search_indexing_checkpoints/: 0b6e2b7b-b176-4dab-8c2c-1097872a2d91.json  44654b90-a7a3-48c2-91f7-84308c633859.json  4598f689-56d8-4876-a08e-7b477bb57c8c.json  55ce3382-41a2-4607-8835-9db9ae30af95.json  73396ab6-e3e3-4de6-909b-0ba4eb07c636.json  d86d3a0a-5f3c-4409-835f-4b85ebef33a5.json  eb9d332b-7c34-456d-b8dc-53a84ce7fb0c.json  ecddedc5-00c7-45a2-8c73-0533f7401e87.json
backend/tests/: test_deployment.py  test_performance.py  test_rate_limiting.py  test_resilience.py
docker/: Dockerfile.backend  Dockerfile.backend.prod  Dockerfile.frontend  entrypoint.backend.sh  gunicorn.conf.py
docs/: DISASTER_RECOVERY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_INFRASTRUCTURE_SUMMARY.md  README.md
docs/adr/: 0001-service-layer.md  0002-jwt-authentication.md  0003-celery-background-processing.md  0004-openapi.md  0005-rbac.md
docs/architecture/: observability.md  system-overview.md
docs/deployment/: AWS_DEPLOYMENT_GUIDE.md
docs/development/: coding-standards.md  definition-of-done.md  developer-guide.md  engineering-principles.md
docs/frontend/admin/: ARCHITECTURE.md  OPERATIONS_GUIDE.md  PHASE_SUMMARY.md  README.md
docs/guides/: DEMO_GUIDE.md  TROUBLESHOOTING_GUIDE.md
docs/monitoring/: alerting-recommendations.md  container-monitoring.md  grafana-dashboards.json
docs/runbooks/: database-outage.md  high-cpu-usage.md  high-error-rate.md  high-latency.md  high-memory-usage.md  queue-backlog.md  redis-outage.md  worker-offline.md
docs/search/indexing/: README.md  architecture.md  developer-guide.md  extension-guide.md  (+4 more)
docs/security/: BACKUP_RECOVERY.md  DEPENDENCY_SECURITY.md  PRODUCTION_READINESS_CHECKLIST.md  SECRET_MANAGEMENT.md  SECURITY_AUDIT.md  SECURITY_MONITORING.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/docs/: FRONTEND_ARCHITECTURE.md
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
nginx/: default.conf  nginx-frontend.conf  nginx.conf  nginx.prod.conf
(+430 files in other folders)
