[project]
name = "matchhire"
version = "1.0.0"
description = "Verified job aggregation and intelligent matching platform"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | migrations
  | node_modules
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = ["migrations", "venv", ".venv", "build", "dist"]
known_django = "django"
known_first_party = ["matchhire_backend", "apps"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument (often used in django views)
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
    "node_modules",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.per-file-ignores]
"*/migrations/*" = ["ALL"]
"**/settings/base.py" = ["E402"]
"**/settings/prod.py" = ["F403", "F405", "E402"]
"**/settings/test.py" = ["F403"]

[tool.ruff.isort]
known-first-party = ["matchhire_backend", "apps"]
known-third-party = ["django", "rest_framework", "celery"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

# Note: Django models don't have type annotations by default.
# Type checking is configured to be permissive for this Django project.
# Adding comprehensive type hints to Django models is a large undertaking
# and is deferred for future work. The current configuration focuses on
# catching basic errors while being pragmatic about Django's dynamic nature.
[tool.mypy]
python_version = "3.11"
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_return_any = false
strict_optional = false
plugins = ["mypy_django_plugin.main"]
exclude = [
    "migrations/",
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    "node_modules/",
]

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rest_framework.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "decouple.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "debug_toolbar.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "drf_spectacular.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pypdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentry_sdk.*"
ignore_missing_imports = true

# Note: Django models don't have type annotations by default.
# Type checking is disabled for project code to avoid requiring
# extensive type annotation work. This is a pragmatic approach
# for Django projects without comprehensive type hints.
[[tool.mypy.overrides]]
module = "apps.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "matchhire_backend.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "matchhire_backend.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "matchhire_backend.settings.development"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["backend/apps"]
addopts = "--tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "manage.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if DEBUG:",
]
